fix: fixing overflow for phone screens

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -240,7 +240,6 @@ img {
 .contenido p {
     line-height: 2rem;
     padding: 0rem 8rem;
-
 }
 
 .main > .testimonials {
@@ -371,6 +370,7 @@ img {
     text-align: center;
     justify-content: space-between;
     width: 25rem;
+    // width: 50%;
     margin-bottom: 4rem;
 }
 
@@ -468,6 +468,8 @@ img {
         display: none;
     }
 
+    
+
     /* Comprimimos el menú superior y lo ingresamos a un desplegable */
     .header .menu-bar {
         display: flex;
@@ -529,4 +531,41 @@ img {
         position: relative;
         bottom: 4rem;
     }
+
+
+    // Tratando de arreglar el overflow en moviles
+    .articles > .article-design {
+        // width: 100%;
+        // height: 770px;
+        padding: 1rem 1rem 3rem 1rem;
+        // display: flex;
+        // justify-content: center;
+        // flex-direction: column;
+    }
+
+    .header {
+        padding: .3rem;
+    }
+
+    .footer > .enlaces-footer {
+        // width: 50%;
+        width: 15rem;
+    }
+
+    .footer > .redes-sociales {
+        width: 8rem;
+        // width: 40%;
+    }
+
+    .header > h2 {
+        margin-bottom: .5rem;
+        letter-spacing: 10px;
+        font-size: 2rem
+    }
+
+    .contenido p {
+        line-height: 2rem;
+        padding: 0rem 2rem;
+    }
+
 }
